[gd_scene load_steps=37 format=3 uid="uid://wnx8qbw2ogkl"]

[ext_resource type="PackedScene" uid="uid://bxeu4tsp3s7rv" path="res://addons/bcmc/basic_character_movement_chb.tscn" id="1_oedg2"]
[ext_resource type="Script" uid="uid://d0wvcwinikw2f" path="res://characters/manequin1/manequin1.gd" id="1_sawr3"]
[ext_resource type="Script" uid="uid://b2k217c5v1iv6" path="res://characters/manequin1/animation_tree.gd" id="2_3hxcs"]
[ext_resource type="PackedScene" uid="uid://drgkbj82dsnq0" path="res://characters/manequin1/skeleton/manequin1_skeleton.tscn" id="2_olxrn"]
[ext_resource type="Script" uid="uid://j52kg8r08tpw" path="res://prefabs/weapon/weapon.gd" id="3_wgd5m"]
[ext_resource type="PackedScene" uid="uid://26d5x3s2uicw" path="res://prefabs/bullet/bullet.tscn" id="4_5531b"]
[ext_resource type="PackedScene" uid="uid://pi20ahljxc35" path="res://characters/manequin1/animationplayer/manequin1_animationplayer.tscn" id="4_nxp4m"]
[ext_resource type="ArrayMesh" uid="uid://pcyafiidu8se" path="res://prefabs/weapon/assault_rifle_1.tres" id="5_crhi1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_flbwa"]
size = Vector3(0.55, 0.1, 0.2)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cmrvg"]
radius = 0.2
height = 1.8

[sub_resource type="BoxShape3D" id="BoxShape3D_nxp4m"]
size = Vector3(0.55, 0.1, 0.2)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wgd5m"]
animation = &"Fall/Fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nxp4m"]
animation = &"Idle/Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5ta80"]
animation = &"Jump/Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5531b"]
animation = &"RunArmed/Armature|mixamo_com|Layer0"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_crhi1"]
animation = &"WalkArmed/Armature|mixamo_com|Layer0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_crhi1"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_suwsr"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iwmhr"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ut6h3"]
advance_mode = 2
advance_condition = &"fall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xrtdj"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dpld4"]
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_svtgo"]
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fmqn6"]
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hrxdt"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xtyeo"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d27r6"]
advance_mode = 2
advance_condition = &"fall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aqs0d"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kweev"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_63i3r"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iu0do"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_df8rq"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vt3mj"]
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m07pp"]
advance_mode = 2
advance_condition = &"fall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bvdue"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_vok5j"]
states/End/position = Vector2(1084, 104)
states/Fall_Fall/node = SubResource("AnimationNodeAnimation_wgd5m")
states/Fall_Fall/position = Vector2(860, -76.714)
states/Idle_Idle/node = SubResource("AnimationNodeAnimation_nxp4m")
states/Idle_Idle/position = Vector2(249, 109)
states/Jump_Jump/node = SubResource("AnimationNodeAnimation_5ta80")
states/Jump_Jump/position = Vector2(860, 293)
states/RunArmed/node = SubResource("AnimationNodeAnimation_5531b")
states/RunArmed/position = Vector2(482, 293)
states/Start/position = Vector2(72, 109)
states/WalkArmed/node = SubResource("AnimationNodeAnimation_crhi1")
states/WalkArmed/position = Vector2(482, -76.714)
transitions = ["Start", "Idle_Idle", SubResource("AnimationNodeStateMachineTransition_crhi1"), "Idle_Idle", "Jump_Jump", SubResource("AnimationNodeStateMachineTransition_suwsr"), "Jump_Jump", "Idle_Idle", SubResource("AnimationNodeStateMachineTransition_iwmhr"), "Idle_Idle", "Fall_Fall", SubResource("AnimationNodeStateMachineTransition_ut6h3"), "Fall_Fall", "Idle_Idle", SubResource("AnimationNodeStateMachineTransition_xrtdj"), "Idle_Idle", "WalkArmed", SubResource("AnimationNodeStateMachineTransition_dpld4"), "Fall_Fall", "WalkArmed", SubResource("AnimationNodeStateMachineTransition_svtgo"), "Jump_Jump", "WalkArmed", SubResource("AnimationNodeStateMachineTransition_fmqn6"), "WalkArmed", "Idle_Idle", SubResource("AnimationNodeStateMachineTransition_hrxdt"), "WalkArmed", "Jump_Jump", SubResource("AnimationNodeStateMachineTransition_xtyeo"), "WalkArmed", "Fall_Fall", SubResource("AnimationNodeStateMachineTransition_d27r6"), "Idle_Idle", "RunArmed", SubResource("AnimationNodeStateMachineTransition_aqs0d"), "WalkArmed", "RunArmed", SubResource("AnimationNodeStateMachineTransition_kweev"), "Fall_Fall", "RunArmed", SubResource("AnimationNodeStateMachineTransition_63i3r"), "Jump_Jump", "RunArmed", SubResource("AnimationNodeStateMachineTransition_iu0do"), "RunArmed", "Idle_Idle", SubResource("AnimationNodeStateMachineTransition_df8rq"), "RunArmed", "WalkArmed", SubResource("AnimationNodeStateMachineTransition_vt3mj"), "RunArmed", "Fall_Fall", SubResource("AnimationNodeStateMachineTransition_m07pp"), "RunArmed", "Jump_Jump", SubResource("AnimationNodeStateMachineTransition_bvdue")]
graph_offset = Vector2(0, -179.809)

[node name="Character1" type="CharacterBody3D"]
script = ExtResource("1_sawr3")

[node name="Armature" type="Node3D" parent="."]

[node name="Skeleton3D" parent="Armature" instance=ExtResource("2_olxrn")]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)
bones/0/position = Vector3(-5.24554, 103.191, -0.859931)
bones/0/rotation = Quaternion(-0.0295006, 0.998332, 0.00247758, 0.0495576)
bones/1/rotation = Quaternion(-0.0694522, 0.00256239, 0.0158044, 0.997457)
bones/2/rotation = Quaternion(0.0212781, 0.00314279, 0.0276877, 0.999385)
bones/3/rotation = Quaternion(0.034154, 0.00349931, 0.0276449, 0.999028)
bones/4/rotation = Quaternion(-0.0908581, -0.00020677, 0.00644733, 0.995843)
bones/5/rotation = Quaternion(0.0362187, 0.0156359, -0.0462148, 0.998152)
bones/7/rotation = Quaternion(-0.540429, 0.528467, -0.545778, -0.361643)
bones/8/position = Vector3(-1.62441e-06, 10.8382, -3.10031e-05)
bones/8/rotation = Quaternion(0.490529, -0.287419, -0.203865, 0.797001)
bones/9/rotation = Quaternion(0.000705771, 0.00688945, -0.101919, 0.994769)
bones/10/rotation = Quaternion(-0.199874, 0.256094, -0.106423, 0.939756)
bones/11/rotation = Quaternion(0.201768, 0.149034, -0.104799, 0.962339)
bones/12/position = Vector3(1.28429e-06, 4.18899, 2.06828e-07)
bones/12/rotation = Quaternion(-0.0389466, -0.0092818, 0.129819, 0.990729)
bones/13/position = Vector3(3.88932e-06, 3.41631, 5.02575e-06)
bones/13/rotation = Quaternion(-0.00166425, -0.000807497, 0.00691993, 0.999974)
bones/14/position = Vector3(1.50023e-06, 2.57501, -4.7795e-06)
bones/15/rotation = Quaternion(0.145227, 0.0656841, 0.0610647, 0.985325)
bones/16/position = Vector3(-2.73378e-07, 3.7, -1.33365e-06)
bones/16/rotation = Quaternion(0.072027, 0.000357134, 0.00604843, 0.997384)
bones/17/position = Vector3(1.26357e-06, 2.85, -1.92222e-06)
bones/17/rotation = Quaternion(8.10604e-06, -1.60417e-07, -8.80785e-05, 1)
bones/18/position = Vector3(9.5964e-07, 2.7722, -1.24357e-06)
bones/19/rotation = Quaternion(0.12853, 0.00768888, 0.0527752, 0.99027)
bones/20/rotation = Quaternion(0.0995516, 0.00044684, -0.00464021, 0.995022)
bones/21/rotation = Quaternion(2.58619e-06, -1.5119e-07, -0.000322039, 1)
bones/23/rotation = Quaternion(0.17849, 0.011279, 0.0335061, 0.983306)
bones/24/position = Vector3(2.0267e-06, 3.3793, -4.36342e-06)
bones/24/rotation = Quaternion(0.0831293, 0.00280174, -0.00425021, 0.996526)
bones/25/position = Vector3(-1.65623e-06, 2.88969, -2.90324e-06)
bones/25/rotation = Quaternion(2.64023e-06, -3.93067e-08, -0.000112842, 1)
bones/26/position = Vector3(2.36532e-07, 2.63879, -1.62171e-06)
bones/27/rotation = Quaternion(0.193952, -0.00700929, 0.0325801, 0.980445)
bones/28/rotation = Quaternion(0.108795, 0.00729662, -0.0364779, 0.993368)
bones/29/rotation = Quaternion(3.57877e-06, -2.68242e-07, -0.000497233, 1)
bones/30/position = Vector3(1.03052e-06, 2.11579, -3.53805e-06)
bones/31/rotation = Quaternion(0.56877, 0.503688, -0.538899, 0.36385)
bones/32/position = Vector3(3.70978e-06, 10.8377, 3.06252e-05)
bones/32/rotation = Quaternion(0.509453, 0.207972, 0.222922, 0.804681)
bones/33/rotation = Quaternion(0.000372831, -0.00500645, 0.0742878, 0.997224)
bones/34/rotation = Quaternion(-0.094844, -0.146955, 0.156193, 0.972118)
bones/35/rotation = Quaternion(0.217381, -0.117752, 0.119661, 0.961541)
bones/36/position = Vector3(4.75992e-06, 4.18711, 3.89209e-07)
bones/36/rotation = Quaternion(-0.04866, 0.0175966, -0.0928335, 0.994336)
bones/37/position = Vector3(1.12614e-05, 3.41841, 1.16905e-05)
bones/37/rotation = Quaternion(-0.00153081, 0.000745042, -0.00607343, 0.99998)
bones/39/rotation = Quaternion(0.11909, -0.068318, -0.0984775, 0.985623)
bones/40/position = Vector3(-1.94725e-07, 3.69999, -5.02913e-06)
bones/40/rotation = Quaternion(0.100165, 0.0038256, -0.0102016, 0.994911)
bones/41/rotation = Quaternion(7.24975e-08, -1.20909e-07, -6.63425e-05, 1)
bones/43/rotation = Quaternion(0.0937555, -0.0126205, -0.0592477, 0.993751)
bones/44/position = Vector3(-1.21698e-07, 3.7, -3.5297e-06)
bones/44/rotation = Quaternion(0.10278, 6.58913e-05, 0.00322412, 0.994699)
bones/45/position = Vector3(-2.82376e-06, 2.95001, -7.87905e-07)
bones/45/rotation = Quaternion(-2.58624e-06, -2.24386e-07, 2.05988e-05, 1)
bones/47/rotation = Quaternion(0.199945, 0.00440647, -0.0559563, 0.978198)
bones/48/position = Vector3(-8.46671e-07, 3.15, -1.7285e-06)
bones/48/rotation = Quaternion(0.125201, -0.00129538, 0.00257026, 0.992127)
bones/49/position = Vector3(-1.83292e-07, 2.95002, 7.74903e-07)
bones/49/rotation = Quaternion(-2.58625e-06, -3.96691e-07, -3.15869e-07, 1)
bones/50/position = Vector3(2.46403e-06, 2.64431, -1.01516e-06)
bones/51/rotation = Quaternion(0.309076, 0.0347409, -0.0628408, 0.948323)
bones/52/position = Vector3(-1.31294e-08, 3.60001, -3.34129e-06)
bones/52/rotation = Quaternion(0.208921, -0.000893241, 0.0370727, 0.977229)
bones/53/position = Vector3(-7.59508e-07, 2.09999, -7.7828e-07)
bones/53/rotation = Quaternion(7.26608e-06, 5.18886e-07, -6.66555e-05, 1)
bones/54/position = Vector3(2.27806e-06, 2.1255, -5.95357e-07)
bones/55/rotation = Quaternion(-0.0607467, 0.0317415, 0.995947, -0.0582382)
bones/56/rotation = Quaternion(-0.110994, -0.000199082, 0.0021401, 0.993819)
bones/57/rotation = Quaternion(0.49386, 0.0813515, -0.0655682, 0.863241)
bones/58/rotation = Quaternion(0.357824, -0.00780357, 0.00607018, 0.933737)
bones/60/rotation = Quaternion(0.0236692, 0.137057, 0.987331, -0.0763675)
bones/61/rotation = Quaternion(-0.165819, -0.000840551, -0.00479372, 0.986144)
bones/62/rotation = Quaternion(0.428308, -0.163427, 0.0422244, 0.887728)
bones/63/rotation = Quaternion(0.333638, -0.021027, 0.0213215, 0.942225)

[node name="Bone" type="BoneAttachment3D" parent="Armature/Skeleton3D"]
transform = Transform3D(-0.0528333, 0.370742, -0.927232, 0.330576, -0.869682, -0.366568, -0.942299, -0.325888, -0.0766101, 15.0856, 84.9011, 8.87246)
bone_name = "mixamorig_RightHand"
bone_idx = 10

[node name="Weapon" type="RigidBody3D" parent="Armature/Skeleton3D/Bone"]
transform = Transform3D(-0.0871558, 4.75211e-08, 0.996195, 0.996195, -4.35451e-08, 0.0871558, 4.75211e-08, 1, -4.35451e-08, 0, 0, 0)
collision_layer = 2
collision_mask = 2
gravity_scale = 0.0
script = ExtResource("3_wgd5m")
bullet = ExtResource("4_5531b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Armature/Skeleton3D/Bone/Weapon"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
mesh = ExtResource("5_crhi1")

[node name="WeaponHull" type="CollisionShape3D" parent="Armature/Skeleton3D/Bone/Weapon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.275, 0, 0.1)
shape = SubResource("BoxShape3D_flbwa")
disabled = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.92, 0)
shape = SubResource("CapsuleShape3D_cmrvg")

[node name="WeaponHull" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_nxp4m")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_vok5j")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/fall = false
parameters/conditions/idle = false
parameters/conditions/jump = false
parameters/conditions/run = false
parameters/conditions/walk = false
script = ExtResource("2_3hxcs")

[node name="AnimationPlayer" parent="." instance=ExtResource("4_nxp4m")]

[node name="BasicCharacterMovement" parent="." node_paths=PackedStringArray("armature", "directionalObject") instance=ExtResource("1_oedg2")]
armature = NodePath("../Armature")
directionalObject = NodePath("../SpringArm3D")
leftInput = "ui_left"
rightInput = "ui_right"
frontInput = "ui_up"
rearInput = "ui_down"
jumpInput = "ui_select"

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 1.8, 0)
spring_length = 2.5

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]
